--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -1,3 +1,12 @@
+Of the text provided, make a summary of the text, as i will use it to study later. Dont add more information of your own, stick to the information provided in the text. Give the summary in .md file and put it in a section ready to copy paste: 
+
+
+
+Of the text provided, make a summary of the text, as i will use it to study later. Dont add more information of your own, if there is code present add it in code section of .md format, stick to the information provided in the text. Give the summary in .md file and put it in a section ready to copy paste: 
+
+
+
+
 # Notes
 
 AI solutions are built on machine learning models that encapsulate semantic relationships found in huge quantities of data; enabling applications to appear to interpret input in various formats, reason over the input data, and generate appropriate responses and predictions.
